# apipure-cart

./: .gitignore  Dockerfile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  pyproject.toml  railway.json  skills-lock.json
app/: config.py  database.py  dependencies.py  logger.py  main.py
app/apiResponse/: schemas.py
app/auth/: controller.py  models.py  router.py  routes.py  utils.py
app/favorites/: controller.py  router.py  routes.py  service.py
app/orders/: controller.py  models.py  routes.py
app/payment_methods/: controller.py  models.py  routes.py
app/products/: controller.py  router.py  routes.py  schemas.py  service.py
app/shipping/: controller.py  models.py  routes.py
app/trace/: __init__.py  logger.py
app/transactions/: controller.py  models.py  router.py  routes.py  service.py
app/users/: controller.py  models.py  router.py  routes.py  service.py
